Bug 1871523 - Only error once when rendering into a canvas after shutdown. r=gfx-reviewers,ahale

EnsureTarget() is called in many places in the code without checking the result, so
in error cases, like processing path builder commands, it can lead to EnsureTarget()
generating an error to the log on every single invocation, with some users noticing
thousands upon thousands of errors being generated.

One notice of this error should be sufficient, given that this is a shutdown error.

Differential Revision: https://phabricator.services.mozilla.com/D197440