dom/canvas/CanvasRenderingContext2D.cpp
@@ -1491,7 +1491,7 @@ bool CanvasRenderingContext2D::BorrowTarget(const IntRect& aPersistedRect,
 bool CanvasRenderingContext2D::EnsureTarget(const gfx::Rect* aCoveredRect,
                                             bool aWillClear) {
   if (AlreadyShutDown()) {
-    gfxCriticalError() << "Attempt to render into a Canvas2d after shutdown.";
+    gfxCriticalErrorOnce() << "Attempt to render into a Canvas2d after shutdown.";
     SetErrorState();
     return false;
   }
